--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -26,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy" :"https://apisoc.herokuapp.com/",
+  "proxy": "https://apisoc.herokuapp.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
